update list of software projects

--- a/cv.htm
+++ b/cv.htm
@@ -75,27 +75,113 @@
      </p><br>
         
 		<p class="Indented12LR_bold">Bioinformatics tools/software projects</p>        
-		<p class="Indented12LR">
-    <a href="http://www.alexaplatform.org/alexa_arrays/index.htm">ALEXA</a> - a microarray design and analysis platform for alternative expression analysis. Retired.<br>
-		<a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a> - a method for alternative expression analysis of RNA-seq data. Retired.<br>
-		<a href="http://www.oreganno.org/oregano/">ORegAnno</a> - an open database for the curation of known regulatory elements from scientific literature. Active.<br>
-    <a href="http://dgidb.genome.wustl.edu/">DGIdb</a> (<a href="https://github.com/genome/dgi-db">git repo</a>) - the gene drug interaction database. Active.<br>
-    <a href="https://github.com/genome/gms">GMS</a> (<a href="https://github.com/genome/gms">core git repo</a>) (<a href="https://github.com/genome/genome">installer git repo</a>) - Genome Modeling System: A Knowledge Management Platform for Genomics. Active.<br>
-    <a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a> (<a href="https://github.com/griffithlab/rnaseq_tutorial">git repo</a>) - Informatics for RNA-seq: A web resource for analysis on the cloud. Active.<br>
-    <a href="http://docm.genome.wustl.edu/">DOCM</a> (<a href="https://github.com/genome/docm">git repo</a>) - the Database of Curated Mutations. Active.<br>
-    <a href="https://civic.genome.wustl.edu/#/home">CIVIC</a> (<a href="https://github.com/genome/civic-server">civic-server git repo</a>) (<a href="https://github.com/genome/civic-client">civic-client git repo</a>) - Clinical Interpretation of Variants in Cancer. Active.<br>
-    <a href="https://github.com/genome/sciclone">SciClone</a> (<a href="https://github.com/genome/sciclone">git repo</a>) - An package for inferring the subclonal architecture of tumors. Active.<br>
-    <a href="https://github.com/griffithlab/GenVisR">GenVisR</a> (<a href="https://github.com/griffithlab/GenVisR">git repo</a>) - A package for highly customizable publication-quality visualization of genomics data. Active.<br>
-    <a href="https://github.com/griffithlab/regtools">RegTools</a> (<a href="https://github.com/griffithlab/regtools">git repo</a>) - Tools that integrate DNA-seq and RNA-seq data to help interpret mutations in a regulatory and splicing context. Active.<br>
-    <a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a> (<a href="https://github.com/griffithlab/pVAC-Seq">git repo</a>) - A cancer immunotherapy pipeline. Active.<br>
-
-
+		<p class="Indented12LR">The following table lists selected tools that I have contributed to.  Some of the more recent examples are listed first.
 		</p>
-                
-        <br><br><br><br>
 		</td>
 	</tr>
 </table>
+
+<!-- Table of tools -->
+<table cellpadding="0" cellspacing="0" width="752" class="Content">
+  <tr>
+    <td class="Head">Tool/Resource</td> <td class="Head">Source Code</td> <td class="Head">Description</td> <td class="Head">Current Status</td>
+  </tr>
+ 
+  <tr>
+    <td class="Data"><a href="https://civic.genome.wustl.edu/#/home">CIVIC</a></td> 
+    <td class="Data"><a href="https://github.com/genome/civic-server">civic-server git repo</a>, <a href="https://github.com/genome/civic-client">civic-client git repo</a></td> 
+    <td class="Data">Clinical Interpretation of Variants in Cancer</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://docm.genome.wustl.edu/">DOCM</a></td> 
+    <td class="Data"><a href="https://github.com/genome/docm">git repo</a></td> 
+    <td class="Data">The Database of Curated Mutations</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://dgidb.genome.wustl.edu/">DGIdb</a></td> 
+    <td class="Data"><a href="https://github.com/genome/dgi-db">git repo</a></td> 
+    <td class="Data">The gene drug interaction database</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/griffithlab/rnaseq_tutorial/wiki">RNA-seq.wiki</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/rnaseq_tutorial">git repo</a></td> 
+    <td class="Data">Informatics for RNA-seq: A web resource for analysis on the cloud</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/griffithlab/regtools">RegTools</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/regtools">git repo</a></td> 
+    <td class="Data">Tools that integrate DNA-seq and RNA-seq data to help interpret mutations in a regulatory and splicing context</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/griffithlab/pVAC-Seq">pVAC-seq</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/pVAC-Seq">git repo</a></td> 
+    <td class="Data">A pipeline for prioritization of neoantigen candidates for cancer immunotherapy</td> 
+    <td class="Data">Active</td>
+  </tr>
+ 
+  <tr>
+    <td class="Data"><a href="https://github.com/griffithlab/GenVisR">GenVisR</a></td> 
+    <td class="Data"><a href="https://github.com/griffithlab/GenVisR">git repo</a></td> 
+    <td class="Data">A package for highly customizable publication-quality visualization of genomics data</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://www.oreganno.org/oregano/">ORegAnno</a></td> 
+    <td class="Data">Code</td> 
+    <td class="Data">An open database for the curation of known regulatory elements from scientific literature</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/genome/gms">GMS</a></td> 
+    <td class="Data"><a href="https://github.com/genome/gms">core git repo</a>, <a href="https://github.com/genome/genome">installer git repo</a></td> 
+    <td class="Data">Genome Modeling System: A Knowledge Management Platform for Genomics</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="https://github.com/genome/sciclone">SciClone</a></td> 
+    <td class="Data"><a href="https://github.com/genome/sciclone">git repo</a></td> 
+    <td class="Data">A package for inferring the subclonal architecture of tumors</td> 
+    <td class="Data">Active</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a></td> 
+    <td class="Data">Code</td> 
+    <td class="Data">A method for alternative expression analysis of RNA-seq data</td> 
+    <td class="Data">Retired</td>
+  </tr>
+
+  <tr>
+    <td class="Data"><a href="http://www.alexaplatform.org/alexa_arrays/index.htm">ALEXA</a></td>
+    <td class="Data">Code</td> 
+    <td class="Data">A microarray design and analysis platform for alternative expression analysis</td> 
+    <td class="Data">Retired</td>
+  </tr>
+
+</table>    
+
+
+
+<!-- Spacing at bottom -->
+<table cellpadding="0" cellspacing="0" width="752" class="Content">
+  <tr>
+  <tr>
+    <td><br><br></td>
+  </tr>
+</table>    
 
 <!-- Bottom button row -->
 <table cellpadding="0" cellspacing="0" width="750" class="Bottom">
