--- a/cv.htm
+++ b/cv.htm
@@ -138,7 +138,7 @@
 
   <tr>
     <td class="Data"><a href="http://www.oreganno.org/oregano/">ORegAnno</a></td> 
-    <td class="Data">Code</td> 
+    <td class="Data"><a href="http://py-gi1.stanford.edu:8080/oregano/help/source.html">Instructions</a></td> 
     <td class="Data">An open database for the curation of known regulatory elements from scientific literature</td> 
     <td class="Data">Active</td>
   </tr>
@@ -159,14 +159,14 @@
 
   <tr>
     <td class="Data"><a href="http://www.alexaplatform.org/alexa_seq/">ALEXA-seq</a></td> 
-    <td class="Data">Code</td> 
+    <td class="Data"><a href="https://github.com/malachig/alexa-seq">git repo</a></td> 
     <td class="Data">A method for alternative expression analysis of RNA-seq data</td> 
     <td class="Data">Retired</td>
   </tr>
 
   <tr>
     <td class="Data"><a href="http://www.alexaplatform.org/alexa_arrays/index.htm">ALEXA</a></td>
-    <td class="Data">Code</td> 
+    <td class="Data"><a href="https://github.com/malachig/alexa">git repo</a></td> 
     <td class="Data">A microarray design and analysis platform for alternative expression analysis</td> 
     <td class="Data">Retired</td>
   </tr>
