--- a/cv.htm
+++ b/cv.htm
@@ -60,13 +60,14 @@
 		<p class="Indented12LR">
       WashU MGI Faculty page: <a href="http://genome.wustl.edu/people/griffith_malachi">Profile</a><br>
 			Linked In: <a href="http://www.linkedin.com/in/malachigriffith">Profile</a><br>
-      Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
+            Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
 			Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Profile</a><br>
 			Research Gate: <a href="http://www.researchgate.net/profile/Malachi_Griffith/">Profile</a><br>
 			Scopus: <a href="http://www.scopus.com/authid/detail.url?authorId=7102075315">Profile</a><br>
-      Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
+            Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
 			Open Research ID: <a href="http://orcid.org/0000-0002-6388-446X">Profile</a><br>
-			Github: <a href="https://github.com/malachig">Profile</a><br>
+            Europe PMC: <a href="http://europepmc.org/authors/0000-0002-6388-446X">Profile</a><br> 
+            Github: <a href="https://github.com/malachig">Profile</a><br>
 			BioStar: <a href="http://www.biostars.org/user/profile/3034/">Profile</a><br>
 			SeqAnswers: <a href="http://seqanswers.com/forums/search.php?searchid=1795608">Profile</a><br>
 			Code Academy: <a href="http://www.codecademy.com/malachig">Profile</a><br>
