--- a/publications.htm
+++ b/publications.htm
@@ -45,7 +45,7 @@
 	
 		
 		<!--- publication citations and links section --->
-        <p class="Indented12LR_s16_Bold">Publications (<a href="http://www.ncbi.nlm.nih.gov/myncbi/collections/bibliography/46519286/">My NCBI Bibliography</a> | <a href="https://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Google Scholar Citation List</a>):</p>
+        <p class="Indented12LR_s16_Bold">Publications (<a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/46519286/?sort=date&direction=descending">My NCBI Bibliography</a> | <a href="https://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Google Scholar Citation List</a>):</p>
       
 
 		<!--- javascript to allow altmetric badges 
