--- a/contact.htm
+++ b/contact.htm
@@ -57,7 +57,8 @@
 					St. Louis, MO, USA, 63108<br>
 					Phone: 314-286-1274<br><br>
 					Linked In: <a href="http://www.linkedin.com/in/malachigriffith" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.gif" width="20" height="15" alt="View Malachi Griffith's LinkedIn profile" style="vertical-align:middle" border="0">View Malachi Griffith's profile</span></a><br><br>
-					Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Citations</a><br>
+                    Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Citations</a><br>
+                    My NCBI: <a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/46519286/?sort=date&direction=descending">Bibliography</a> 
                     ORCID: <a href="http://orcid.org/0000-0002-6388-446X">Profile</a><br>
                     Europe PMC: <a href="http://europepmc.org/authors/0000-0002-6388-446X">Profile</a><br>
                     Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
