--- a/cv.htm
+++ b/cv.htm
@@ -62,7 +62,7 @@
 			Linked In: <a href="http://www.linkedin.com/in/malachigriffith">Profile</a><br>
             Twitter: <a href="http://www.twitter.com/malachigriffith">Feed</a><br>
             Google Scholar: <a href="http://scholar.google.com/citations?user=fcIQQ3oAAAAJ&hl=en">Profile</a><br>
-            My NCBI: <a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/46519286/?sort=date&direction=descending">Bibliography</a>
+            My NCBI: <a href="http://www.ncbi.nlm.nih.gov/myncbi/browse/collection/46519286/?sort=date&direction=descending">Bibliography</a><br>
 			Research Gate: <a href="http://www.researchgate.net/profile/Malachi_Griffith/">Profile</a><br>
 			Scopus: <a href="http://www.scopus.com/authid/detail.url?authorId=7102075315">Profile</a><br>
             Researcher ID: <a href="http://www.researcherid.com/rid/P-1285-2014">Profile</a><br>
