--- a/publications.htm
+++ b/publications.htm
@@ -74,7 +74,7 @@
 
 
     <table class="Pubs"><td>
-        <p class="Indented12LR">Lesurf R, Cotto KC, Wang G, <strong class="NameHighlight">Griffith M</a>, Kasaian K, Jones SJ, Montgomery SB, Griffith OL; Open Regulatory Annotation Consortium<em class="TitleHighlight">ORegAnno 3.0: a community-driven resource for curated regulatory annotation</em>. <strong><a href="http://nar.oxfordjournals.org/">Nucleic Acids Res</a></strong>. 2016 Jan 4;44(D1):D126-32. 
+        <p class="Indented12LR">Lesurf R, Cotto KC, Wang G, <strong class="NameHighlight">Griffith M</strong>, Kasaian K, Jones SJ, Montgomery SB, Griffith OL; Open Regulatory Annotation Consortium<em class="TitleHighlight">ORegAnno 3.0: a community-driven resource for curated regulatory annotation</em>. <strong><a href="http://nar.oxfordjournals.org/">Nucleic Acids Res</a></strong>. 2016 Jan 4;44(D1):D126-32. 
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26578589">abstract</a> | <a href="http://nar.oxfordjournals.org/content/44/D1/D126.long">full text</a> | <a href="http://nar.oxfordjournals.org/content/44/D1/D126.full.pdf">pdf</a> | <a href="http://nar.oxfordjournals.org/content/44/D1/D126/suppl/DC1">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1093/nar/gkv1203&src=bookmarklet">altmetric stats</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1093/nar/gkv1203" align="center"></div>
