--- a/publications.htm
+++ b/publications.htm
@@ -72,6 +72,13 @@
 -->
 
 
+    <table class="Pubs"><td>
+            <p class="Indented12LR">Hundal J, Carreno BM, Petti AA, Linette GP, Griffith OL, Mardis ER, <strong class="NameHighlight">Griffith M</strong>. <em class="TitleHighlight">pVAC-Seq: A genome-guided in silico approach to identifying tumor neoantigens</em>. <strong><a href="https://genomemedicine.biomedcentral.com/">Genome Med</a></strong>. 2016 Jan 29;8(1):11.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26825632">abstract</a> | <a href="http://genomemedicine.biomedcentral.com/articles/10.1186/s13073-016-0264-5">full text</a> | <a href="http://genomemedicine.biomedcentral.com/track/pdf/10.1186/s13073-016-0264-5?site=genomemedicine.biomedcentral.com">pdf</a> | <a href="http://genomemedicine.biomedcentral.com/track/pdf/10.1186/s13073-016-0264-5?site=genomemedicine.biomedcentral.com">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1186/s13073-016-0264-5&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1186/s13073-016-0264-5" align="center"></div>
+    </p><br>
+    </td></table>
 
     <table class="Pubs"><td>
         <p class="Indented12LR">Lesurf R, Cotto KC, Wang G, <strong class="NameHighlight">Griffith M</strong>, Kasaian K, Jones SJ, Montgomery SB, Griffith OL; Open Regulatory Annotation Consortium. <em class="TitleHighlight">ORegAnno 3.0: a community-driven resource for curated regulatory annotation</em>. <strong><a href="http://nar.oxfordjournals.org/">Nucleic Acids Res</a></strong>. 2016 Jan 4;44(D1):D126-32. 
