--- a/publications.htm
+++ b/publications.htm
@@ -71,6 +71,18 @@
 
 -->
 
+  A genomic analysis of Philadelphia chromosome-negative AML arising in patients with CML.  Blood Cancer J. 2016 Apr 8;6:e413.
+PMID: 27058228
+
+
+    <table class="Pubs"><td>
+            <p class="Indented12LR">Krysiak K, Christopher MJ, Skidmore ZL, Demeter RT, Magrini V, Kunisaki J, O'Laughlin M, Duncavage EJ, Miller CA, Ozenberger BA, <strong class="NameHighlight">Griffith M</strong>, Wartman LD, and Griffith OL. <em class="TitleHighlight">A genomic analysis of Philadelphia chromosome-negative AML arising in patients with CML.</em>. <strong><a href="http://www.nature.com/bcj/index.html">Blood Cancer J</a></strong>.
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27058228">abstract</a> | <a href="http://www.nature.com/bcj/journal/v6/n4/full/bcj201618a.html">full text</a> | <a href="http://www.nature.com/bcj/journal/v6/n4/pdf/bcj201618a.pdf">pdf</a> | <a href="http://www.nature.com/bcj/journal/v6/n4/suppinfo/bcj201618s1.html?url=/bcj/journal/v6/n4/full/bcj201618a.html">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/bcj.2016.18&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/bcj.2016.18" align="center"></div>
+    </p><br>
+    </td></table>
+
 
     <table class="Pubs"><td>
             <p class="Indented12LR">Griffith OL*, <strong class="NameHighlight">Griffith M*</strong>, Krysiak K*, Magrini V, Ramu A, Skidmore ZL, Kunisaki J, Austin R, McGrath S, Zhang J, Demeter R, Graves T, Eldred JM, Walker J, Larson DE, Maher CA, Lin Y, Chapman W, Mahadevan A, Miksad R, Nasser I, Hanto DW, Mardis ER. <em class="TitleHighlight">A genomic case study of mixed fibrolamellar hepatocellular carcinoma</em>. <strong><a href="http://annonc.oxfordjournals.org/">Ann Oncol</a></strong>. 2016 Mar 30. pii: mdw135.
