--- a/publications.htm
+++ b/publications.htm
@@ -121,7 +121,7 @@
 
     <table class="Pubs"><td>
             <p class="Indented12LR"> Lu C, Riedell P, Miller CA, Hagemann IS, Westervelt P, Ozenberger BA, OLaughlin M, Magrini V, Demeter RT, Duncavage EJ, <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Wartman LD. <em class="TitleHighlight">A common founding clone with TP53 and PTEN mutations gives rise to a concurrent germ cell tumor and acute megakaryoblastic leukemia</em>. <strong><a href="http://molecularcasestudies.cshlp.org/">Cold Spring Harb Mol Case Stud </a></strong>.
-		<br><a href="">PUBMED ID PENDING</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687.full">full text</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687.full.pdf">pdf</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687/suppl/DC1">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1101/mcs.a000687&src=bookmarklet">altmetric stats</a>
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27148581">abstract</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687.full">full text</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687.full.pdf">pdf</a> | <a href="http://molecularcasestudies.cshlp.org/content/2/1/a000687/suppl/DC1">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1101/mcs.a000687&src=bookmarklet">altmetric stats</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1101/mcs.a000687" align="center"></div>
     </p><br>
@@ -137,7 +137,7 @@
 
     <table class="Pubs"><td>
     <p class="Indented12LR"><strong class="NameHighlight">Griffith M*</strong>, Miller CA*, Griffith OL, Krysiak KC, Skidmore ZL, Ramu A, Walker JR, Dang H, Trani L, Larson DE, Demeter RT, Wendl MC, McMichael JF, Austin R, Magrini V, McGrath S, Ly A, Kulkarni S, Cordes M, Fronick CC, Fulton RS, Maher CA, Ding L, Klco JM, Mardis ER, Ley TJ, Wilson RK. <em class="TitleHighlight">Optimizing cancer genome sequencing and analysis</em>. <strong><a href="http://www.cell.com/cell-systems/home">Cell Systems</a></strong>. 2015 Sep 23;1(3):210-223.
-		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26645048">abstract</a> | <a href="http://www.cell.com/cell-systems/fulltext/S2405-4712(15)00113-1">full text</a> | <a href="http://www.cell.com/cell-systems/pdf/S2405-4712(15)00113-1.pdf">pdf</a> | <a href="http://www.cell.com/cms/attachment/2037347034/2051821105/mmc1.pdf">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.cels.2015.08.015&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=15522148153047582083">google scholar citations (1)</a>
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/26645048">abstract</a> | <a href="http://www.cell.com/cell-systems/fulltext/S2405-4712(15)00113-1">full text</a> | <a href="http://www.cell.com/cell-systems/pdf/S2405-4712(15)00113-1.pdf">pdf</a> | <a href="http://www.cell.com/cms/attachment/2037347034/2051821105/mmc1.pdf">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.cels.2015.08.015&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=15522148153047582083">google scholar citations (11)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.cels.2015.08.015" align="center"></div>
     </p><br>
