add honors thesis to publication list

--- a/publications.htm
+++ b/publications.htm
@@ -464,7 +464,7 @@
 		</td></table>			
 		
     <table class="Pubs"><td>		
-    <p class="Indented12LR">2. <strong class="NameHighlight">Griffith M</strong> and Gietz RD.  <em class="TitleHighlight">Escherichia coli endA deletion strain for use in two-hybrid shuttle vector selection</em>. <strong><a href="http://www.biotechniques.com/">Biotechniques</a></strong>.  2003 Aug;35(2):272-4, 276, 278.
+        <p class="Indented12LR">2. <strong class="NameHighlight">Griffith M</strong> and Gietz RD.  <em class="TitleHighlight">Escherichia coli endA deletion strain for use in two-hybrid shuttle vector selection</em>. <strong><a href="http://www.biotechniques.com/">Biotechniques</a></strong>.  2003 Aug;35(2):272-4, 276, 278.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/12951767">abstract</a> | <a href="http://www.biotechniques.com/multimedia/archive/00011/03352bm05_11636a.pdf">pdf</a> | <a href="http://www.altmetric.com/details.php?pmid=12951767&src=bookmarklet">altmetric stats</a> | <a href="http://scholar.google.com/scholar?cites=1079096075097583146">google scholar citations (7)</a>
 		</td><td>
 		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-pmid="10.1101/gr.4871006" align="center"></div>
@@ -472,7 +472,7 @@
 		</td></table>
 
     <table class="Pubs"><td>		
-    <p class="Indented12LR">2. <strong class="NameHighlight">Griffith M</strong>.  <em class="TitleHighlight">Genetic Modification of the Escherichia coli Strain DH5¿ to Allow the Selection of Plasmids Carrying Complementary Yeast Genes</em>. <strong><a href="http://www.biotechniques.com/">Honor thesis</a></strong>. 2002. University of Winnipeg. Winnipeg, MB, Canada.
+        <p class="Indented12LR">1. <strong class="NameHighlight">Griffith M</strong>.  <em class="TitleHighlight">Genetic Modification of the Escherichia coli Strain DH5alpha to Allow the Selection of Plasmids Carrying Complementary Yeast Genes</em>. <strong><a href="http://www.biotechniques.com/">Honor thesis</a></strong>. 2002. University of Winnipeg. Winnipeg, MB, Canada.
 		<br><a href="http://ion.uwinnipeg.ca/~moodie/Theses/MalachiGriffith2001.pdf">pdf</a>
 		</td><td>
 		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-pmid=" 05.4111/6" align="center"></div>
