--- a/publications.htm
+++ b/publications.htm
@@ -416,7 +416,7 @@
 	</td></table>
 
     <table class="Pubs"><td>
-		<p class="Indented12LR">10. <strong class="NameHighlight">Griffith M</strong>, Tang MJ, Griffith OL, Morin RD, Chan SY, Asano JK, Zeng T, Flibotte S, Ally A, Baross A, Hirst M, Jones SJM, Morin GB, Tai IT and Marra MA.  <em class="TitleHighlight">ALEXA – A microarray design platform for alternative expression analysis</em>.  <strong><a href="http://www.nature.com/nmeth/">Nature Methods</a></strong>. 2008 Feb. 5(2):118.
+		<p class="Indented12LR">10. <strong class="NameHighlight">Griffith M</strong>, Tang MJ, Griffith OL, Morin RD, Chan SY, Asano JK, Zeng T, Flibotte S, Ally A, Baross A, Hirst M, Jones SJM, Morin GB, Tai IT and Marra MA.  <em class="TitleHighlight">ALEXA - A microarray design platform for alternative expression analysis</em>.  <strong><a href="http://www.nature.com/nmeth/">Nature Methods</a></strong>. 2008 Feb. 5(2):118.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/18235430">abstract</a> | <a href="http://www.nature.com/nmeth/journal/v5/n2/full/nmeth0208-118.html">full text</a> | <a href="http://www.nature.com/nmeth/journal/v5/n2/pdf/nmeth0208-118.pdf">pdf</a> | <a href="http://www.nature.com/nmeth/journal/v5/n2/extref/nmeth0208-118-s1.pdf">supp. materials</a> | <a href="http://www.alexaplatform.org/alexa_arrays/">ALEXA arrays website</a> | <a href="http://www.altmetric.com/details.php?pmid=18235430&src=bookmarklet">altmetric stats</a> | <a href="http://scholar.google.com/scholar?cites=13173042452704558038">google scholar citations (28)</a>
 		</td><td>
 		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/nmeth0208-118" align="center"></div>
