--- a/publications.htm
+++ b/publications.htm
@@ -376,7 +376,7 @@
 	</td></table>
 
 	<table class="Pubs"><td>	
- 		<p class="Indented12LR">15. <strong class="NameHighlight">Griffith M</strong>. <em class="TitleHighlight">Methods for transcript variant discovery and alternative expression analysis ¿ Application to the study of 5-FU resistance in colorectal cancer.</em>. <strong><a href="https://www.ubc.ca/">PhD Dissertation</a></strong>. 2010. University of British Columbia, Vancouver, BC, Canada.
+ 		<p class="Indented12LR">15. <strong class="NameHighlight">Griffith M</strong>. <em class="TitleHighlight">Methods for transcript variant discovery and alternative expression analysis - Application to the study of 5-FU resistance in colorectal cancer.</em>. <strong><a href="https://www.ubc.ca/">PhD Dissertation</a></strong>. 2010. University of British Columbia, Vancouver, BC, Canada.
 		<br><a href="https://open.library.ubc.ca/cIRcle/collections/ubctheses/24/items/1.0068972">pdf</a>
 		</td><td>
 		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.14288/1.0068972" align="center"></div>
