--- a/publications.htm
+++ b/publications.htm
@@ -79,6 +79,16 @@
         </p><br>
     </td></table>
 
+
+    <table class="Pubs"><td>
+            <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nat Commun</a></strong>.
+		<br><a href="">abstract</a> | <a href="">full text</a> | <a href="">pdf</a> | <a href="">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi= DOID &src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=    ">google scholar citations (  )</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi=" DOID " align="center"></div>
+    </p><br>
+    </td></table>
+
+
     <table class="Pubs"><td>
         <p class="Indented12LR">52. <strong class="NameHighlight">Griffith M</strong>, Griffith OL, Krysiak K, Skidmore ZL, Christopher MJ, Klco JM, Ramu A, Lamprecht TL, Wagner AH, Campbell KM, Lesurf R, Hundal J, Zhang J, Spies NC, Ainscough BJ, Larson DE, Heath SE, Fronick C, O'Laughlin S, Fulton R, Magrini V, McGrath S, Smith SM, Miller CA, Maher CA, Payton JE, Walker JR, Eldred JM, Walter MJ, Link DC, Graubert TA, Westervelt P, Kulkarni S, DiPersio JF, Mardis ER, Wilson RK, Ley TJ. <em class="TitleHighlight">Comprehensive genomic analysis reveals FLT3 activation and a therapeutic strategy for a patient with relapsed adult B-lymphoblastic leukemia</em>. <strong><a href="http://www.exphem.org/">Exp Hematol.</a></strong>. 2016 Jul;44(7):603-13.
 		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27181063">abstract</a> | <a href="http://www.exphem.org/article/S0301-472X(16)30115-1/fulltext">full text</a> | <a href="http://www.exphem.org/article/S0301-472X(16)30115-1/pdf">pdf</a> | <a href="http://www.exphem.org/article/S0301-472X(16)30115-1/addons">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.exphem.2016.04.011&src=bookmarklet">altmetric stats</a>
