--- a/publications.htm
+++ b/publications.htm
@@ -82,9 +82,9 @@
 
     <table class="Pubs"><td>
             <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nat Commun</a></strong>.
-		<br><a href="">abstract</a> | <a href="">full text</a> | <a href="">pdf</a> | <a href="">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi= DOID &src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=    ">google scholar citations (  )</a>
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27502118">abstract</a> | <a href="http://www.nature.com/articles/ncomms12498">full text</a> | <a href="http://www.nature.com/articles/ncomms12498.pdf">pdf</a> | <a href="http://www.nature.com/articles/ncomms12498#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ncomms12498&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=2083756316931502358">google scholar citations (6)</a>
 		</td><td>
-    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi=" DOID " align="center"></div>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ncomms12498" align="center"></div>
     </p><br>
     </td></table>
 
