--- a/publications.htm
+++ b/publications.htm
@@ -73,7 +73,7 @@
 
     <table class="Pubs"><td>
         <p class="Indented12LR">56. Skidmore ZL, Wagner AH, Lesurf R, Campbell KM, Kunisaki J, Griffith OL, <strong class="NameHighlight">Griffith M</strong>. <em class="TitleHighlight">GenVisR: Genomic Visualizations in R</em>. <strong><a href="http://bioinformatics.oxfordjournals.org/">Bioinformatics</a></strong>. 2016 Oct 1;32(19):3012-4.
-		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27288499">abstract</a> | <a href="https://doi.org/10.1093/bioinformatics/btw325">full text</a> | <a href="https://academic.oup.com/bioinformatics/article-pdf/32/19/3012/6687890/btw325.pdf">pdf</a> | <a href="https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw325#supplementary-data">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1093/bioinformatics/btw325&src=bookmarklet">altmetric stats</a>
+		<br><a href="http://www.ncbi.nlm.nih.gov/pubmed/27288499">abstract</a> | <a href="https://doi.org/10.1093/bioinformatics/btw325">full text</a> | <a href="https://academic.oup.com/bioinformatics/article-pdf/32/19/3012/6687890/btw325.pdf">pdf</a> | <a href="https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btw325#supplementary-data">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1093/bioinformatics/btw325&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=12023460862648584550">google scholar citations (2)</a>
 		</td><td>
         <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1093/bioinformatics/btw325" align="center"></div>
         </p><br>
