--- a/publications.htm
+++ b/publications.htm
@@ -274,7 +274,7 @@
     </td></table>
 
 	<table class="Pubs"><td>
-		<p class="Indented12LR">29. Griffith M, Griffith OL et al. <em class="TitleHighlight">Nucleic Acid Databases in Concise Encyclopaedia of Bioinformatics and Computational Biology.</em>. <  strong><a href="http://www.wiley.com/">Wiley.</a></strong>. Hancock JM, Zvelebil MJ, editors. John Wiley & Sons. Hoboken, NJ. 2014. ISBN: 978-1-118-59816-0.
+		<p class="Indented12LR">29. Griffith M, Griffith OL et al. <em class="TitleHighlight">Nucleic Acid Databases in Concise Encyclopaedia of Bioinformatics and Computational Biology.</em>. <strong><a href="http://www.wiley.com/">Wiley</a></strong>. Hancock JM, Zvelebil MJ, editors. John Wiley & Sons. Hoboken, NJ. 2014. ISBN: 978-1-118-59816-0.
         <br><a href="http://www.wiley.com/WileyCDA/WileyTitle/productCd-0470978716.html">full text</a>
 		</td><td>
         <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="978-0-470-97871-9" align="center"></div>
