--- a/publications.htm
+++ b/publications.htm
@@ -81,7 +81,18 @@
 
 
     <table class="Pubs"><td>
-            <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nat Commun</a></strong>.
+            <p class="Indented12LR">54. Griffith OL, Chan SR, <strong class="NameHighlight">Griffith M</strong>, Krysiak K, Skidmore ZL, Hundal J, Allen JA, Arthur CD, Runci D, Bugatti M, Miceli AP, Schmidt H, Trani L, Kanchi KL, Miller CA, Larson DE, Fulton RS, Vermi W, Wilson RK, Schreiber RD, Mardis ER. <em class="TitleHighlight">Truncating Prolactin Receptor Mutations Promote Tumor Growth in Murine Estrogen Receptor-Alpha Mammary Carcinomas</em>. <strong><a href="http://www.cell.com/cell-reports/home">Cell Reports</a></strong>. 2016 Sep 27;17(1):249-60.
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27681435">abstract</a> | <a href="http://dx.doi.org/10.1016/j.celrep.2016.08.076">full text</a> | <a href="http://www.cell.com/cell-reports/pdf/S2211-1247(16)31172-X.pdf">pdf</a> | <a href="http://www.cell.com/cell-reports/fulltext/S2211-1247(16)31172-X">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1016/j.celrep.2016.08.076&src=bookmarklet">altmetric stats</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1016/j.celrep.2016.08.076" align="center"></div>
+    </p><br>
+    </td></table>
+
+
+
+
+    <table class="Pubs"><td>
+            <p class="Indented12LR">53. Miller CA, Gindin Y, Lu C, Griffith OL, <strong class="NameHighlight">Griffith M</strong>, Shen D, Hoog J, Li T, Larson DE, Watson M, Davies SR, Hunt K, Suman VJ, Snider J, Walsh T, Colditz GA, DeSchryver K, Wilson RK, Mardis ER, Ellis MJ.  <em class="TitleHighlight">Aromatase inhibition remodels the clonal architecture of estrogen-receptor-positive breast cancers</em>. <strong><a href="http://www.nature.com/ncomms/">Nature Communications</a></strong>.
 		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27502118">abstract</a> | <a href="http://www.nature.com/articles/ncomms12498">full text</a> | <a href="http://www.nature.com/articles/ncomms12498.pdf">pdf</a> | <a href="http://www.nature.com/articles/ncomms12498#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/ncomms12498&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=2083756316931502358">google scholar citations (6)</a>
 		</td><td>
     <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/ncomms12498" align="center"></div>
@@ -497,7 +508,7 @@
 	</td></table>
 
     <table class="Pubs"><td>
-        <p class="Indented12LR">1. <strong class="NameHighlight">Griffith M</strong>.  <em class="TitleHighlight">Genetic Modification of the Escherichia coli Strain DH5alpha to Allow the Selection of Plasmids Carrying Complementary Yeast Genes</em>. <strong><a href="https://www.uwinnipeg.ca/">Honor thesis</a></strong>. 2002. University of Winnipeg. Winnipeg, MB, Canada.
+        <p class="Indented12LR">1. <strong class="NameHighlight">Griffith M</strong>.  <em class="TitleHighlight">Genetic Modification of the Escherichia coli Strain DH5alpha to Allow the Selection of Plasmids Carrying Complementary Yeast Genes</em>. <strong><a href="https://www.uwinnipeg.ca/">Honors thesis</a></strong>. 2002. University of Winnipeg. Winnipeg, MB, Canada.
 		<br><a href="http://ion.uwinnipeg.ca/~moodie/Theses/MalachiGriffith2001.pdf">pdf</a>
 		</td><td>
 		<div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-pmid=" 05.4111/6" align="center"></div>
