--- a/publications.htm
+++ b/publications.htm
@@ -80,6 +80,13 @@
     </td></table>
 
 
+    <table class="Pubs"><td>
+            <p class="Indented12LR">55. Ainscough BJ, <strong class="NameHighlight">Griffith M</strong>, Coffman AC, Wagner AH, Kunisaki J, Choudhary MN, McMichael JF, Fulton RS, Wilson RK, Griffith OL, Mardis ER.<em class="TitleHighlight">DoCM: a database of curated mutations in cancer</em>. <strong><a href="http://www.nature.com/nmeth/index.html">Nature Methods</a></strong>. 2016 Sep 29;13(10):806-7.
+		<br><a href="https://www.ncbi.nlm.nih.gov/pubmed/27684579">abstract</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/full/nmeth.4000.html">full text</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/full/nmeth.4000.pdf">pdf</a> | <a href="http://www.nature.com/nmeth/journal/v13/n10/abs/nmeth.4000.html#supplementary-information">supplementary materials</a> | <a href="http://www.altmetric.com/details.php?doi=10.1038/nmeth.4000&src=bookmarklet">altmetric stats</a> | <a href="https://scholar.google.com/scholar?cites=11943890081256936417">google scholar citations (1)</a>
+		</td><td>
+    <div class='altmetric-embed' data-badge-type='donut' data-badge-popover='right' data-doi="10.1038/nmeth.4000" align="center"></div>
+    </p><br>
+    </td></table>
 
 
 
